--- a/madala/package.json
+++ b/madala/package.json
@@ -9,9 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "next": "^15.4.4",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0"
+    "bcryptjs": "^3.0.2",
+    "mongodb": "^6.18.0",
+    "mongoose": "^8.16.4",
+    "next": "15.4.4",
+    "next-auth": "^4.24.11",
+    "react": "19.1.0",
+    "react-dom": "19.1.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
