--- a/madala/package.json
+++ b/madala/package.json
@@ -9,11 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/mongodb-adapter": "^3.10.0",
     "bcryptjs": "^3.0.2",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "next": "15.4.4",
-    "next-auth": "^4.24.11",
+    "next-auth": "^5.0.0-beta.25",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
