--- a/madala/package.json
+++ b/madala/package.json
@@ -32,6 +32,7 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-hot-toast": "^2.5.2",
+    "react-icons": "^5.5.0",
     "tailwind-merge": "^3.3.1"
   },
   "devDependencies": {
