--- a/madala/package.json
+++ b/madala/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/mongodb-adapter": "^3.10.0",
+    "@hookform/resolvers": "^5.2.1",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
@@ -42,11 +43,13 @@
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
     "react-google-recaptcha-v3": "^1.11.0",
+    "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
+    "zod": "^4.0.17",
     "zustand": "^5.0.7"
   },
   "devDependencies": {
