[Task] Rebase tk-28,29,53,57,59 : Feature dashboard for admin
[TASK][TK-57] Tạo trang và logic cho trang quản lý tin tức admin

[TASK][TK-59](QuanNN) Tạo trang và logic cho trang quản lý sản phẩm

[Feat] [TK-28] (Phuc) Manage all users

[Feat] [TK-29] (Phuc) Manage all categories

[Feat] [TK-53] (QuanNV) Dashboard admin for order management

--- a/madala/package.json
+++ b/madala/package.json
@@ -26,6 +26,8 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "lodash": "^4.17.21",
+    "lodash.debounce": "^4.0.8",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
@@ -42,6 +44,7 @@
   "devDependencies": {
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
+    "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
