--- a/madala/package.json
+++ b/madala/package.json
@@ -29,6 +29,7 @@
     "date-fns": "^4.1.0",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
+    "lottie-react": "^2.4.1",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
