--- a/madala/package.json
+++ b/madala/package.json
@@ -30,17 +30,21 @@
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
+    "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
     "next": "15.4.4",
     "next-auth": "^5.0.0-beta.25",
     "next-themes": "^0.4.6",
+    "nodemailer": "^6.10.1",
     "react": "19.1.0",
     "react-day-picker": "^9.8.1",
     "react-dom": "19.1.0",
+    "react-google-recaptcha-v3": "^1.11.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
     "zustand": "^5.0.7"
@@ -51,6 +55,7 @@
     "@types/bcrypt": "^6.0.0",
     "@types/lodash.debounce": "^4.0.9",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.17",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
