--- a/madala/package.json
+++ b/madala/package.json
@@ -28,6 +28,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
@@ -46,6 +47,7 @@
     "react-hook-form": "^7.62.0",
     "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
+    "react-intersection-observer": "^9.16.0",
     "resend": "^6.0.1",
     "tailwind-merge": "^3.3.1",
     "use-debounce": "^10.0.5",
