[TASK][TK-72](QuanNN) Animation with Framer Motion

--- a/madala/package.json
+++ b/madala/package.json
@@ -29,6 +29,7 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
