[TASK][TK-72](QuanNN) Animation with Framer Motion

--- a/madala/package.json
+++ b/madala/package.json
@@ -28,11 +28,11 @@
     "cloudinary": "^2.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.12",
     "input-otp": "^1.4.2",
     "lodash": "^4.17.21",
     "lodash.debounce": "^4.0.8",
     "lottie-react": "^2.4.1",
-    "input-otp": "^1.4.2",
     "lucide-react": "^0.525.0",
     "mongodb": "^6.18.0",
     "mongoose": "^8.16.4",
