--- a/madala/package.json
+++ b/madala/package.json
@@ -12,6 +12,7 @@
     "@ant-design/icons": "^6.0.0",
     "@auth/mongodb-adapter": "^3.10.0",
     "@hookform/resolvers": "^5.2.1",
+    "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-avatar": "^1.1.10",
     "@radix-ui/react-checkbox": "^1.3.2",
     "@radix-ui/react-dialog": "^1.1.14",
